fixed the overflow problem

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     min-height: 100vh;
-    min-width: 100vw;
+    max-width: 100%;
     background-color: rgb(255, 217, 0);
-
+    overflow-x: hidden
 }
 
 .jumbotron {
@@ -120,6 +120,7 @@ img {
         max-width: 100vw;
         padding-left: 0 !important;
         padding-right: 0 !important;
+        margin-top: 0;
     }
     .box {
         background-image: none;
